[tool.poetry]
name = "hyperpy"
version = "0.1.0"
description = ""
authors = ["Antoine <lab.antoine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
bokeh = "^2.2.1"
PyQt5 = "^5.15.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
nox = "^2020.8.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
