[metadata]
name = hyperpy
version = 0.1.0
author = Antoine Laborde
author_email = lab.antoine@gmail.com
description = A python package for hyperspectral image analysis
keywords = chemometrics, hyperspectral imaging
classifiers =
    Programming Language :: Python :: 3.9

[bdist_wheel]
universal = 1

[options]
zip_safe = True
package_dir =
    =src
packages = find:
install_requires =
    scikit-learn==0.23.2
    pandas==1.1.3
    matplotlib==3.3.2
    bokeh==2.2.1
    pyqt5==5.15.1

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest==6.1.1
    pytest-cov==2.10.1
    mock==4.0.2

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov-fail-under 70 --cov-report html --cov=hyperpy

